ordenando las rutas de las imagenes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <picture class="container_image-home" data-aos="zoom-in">
           <img
             class="image_home image_home--border"
-            src="/assets/images/img-centro-portafolio.png"
+            src="./assets/images/img-centro-portafolio.png"
             alt="Ilustración de taza de cafe" />
           <img
             class="image_home"
@@ -198,7 +198,7 @@
           <picture class="container_image-sobreMi">
             <img
               class="image_sobreMi"
-              src="/assets/images/flores-sobre-mi.avif" />
+              src="./assets/images/flores-sobre-mi.avif" />
           </picture>
 
           <div class="container_texto-sobreMi">
