agregando url de los repos

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
               </a>
 
               <!-- Botón para el repositorio del proyecto en GitHub -->
-              <a href="" target="_blank">
+              <a href="https://github.com/Celeste941/portafolio-celestePerez" target="_blank">
                 <button class="btn_repo">
                   <img
                     src="./assets/images/icon-githubProyecto.png"
@@ -454,7 +454,7 @@
             <!-- Contenedor de botones de acción del proyecto -->
             <div class="container_btn--proyectos">
               <!-- Botón para la demo del proyecto -->
-              <a href="" target="_blank">
+              <a href="https://pokeapi-d78ce.web.app/" target="_blank">
                 <button class="btn_demo">
                   <img
                     src="./assets/images/icon-demoProyecto.png"
@@ -500,7 +500,7 @@
             <!-- Contenedor de botones de acción del proyecto -->
             <div class="container_btn--proyectos">
               <!-- Botón para la demo del proyecto -->
-              <a href="" target="_blank">
+              <a href="https://template-rend-vue.web.app" target="_blank">
                 <button class="btn_demo">
                   <img
                     src="./assets/images/icon-demoProyecto.png"
