se agrego curriculum, y detalles en el favicon

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="./assets/images/favicon.png"
+      href="./assets/images/icono-navbar.webp"
       type="image/x-icon" />
   </head>
 
@@ -50,24 +50,19 @@
       <div class="loader"></div>
     </div>
 
+    <!-- Header - menu de navegación -->
     <header class="header">
       <img
         src="./assets/images/Aceleste.png"
         alt="Logo Portafolio"
         class="logo__header" />
-
+        <!-- Menu navegación -->
       <nav class="nav_menu not-active">
         <a href="#home" class="active">Home</a>
         <a href="#sobreMi" data-section="menu" data-value="item2">Sobre mí</a>
-        <a href="#habilidades" data-section="menu" data-value="item3"
-          >Habilidades</a
-        >
-        <a href="#formacion" data-section="menu" data-value="item4"
-          >Formación</a
-        >
-        <a href="#proyectos" data-section="menu" data-value="item5"
-          >Proyectos</a
-        >
+        <a href="#habilidades" data-section="menu" data-value="item3">Habilidades</a>
+        <a href="#formacion" data-section="menu" data-value="item4">Formación</a>
+        <a href="#proyectos" data-section="menu" data-value="item5">Proyectos</a>
         <a href="#contacto" data-section="menu" data-value="item6">Contacto</a>
       </nav>
 
@@ -78,6 +73,7 @@
       </div>
     </header>
 
+    <!-- Main -->
     <main>
       <!-- Home -->
       <section class="home" id="home">
@@ -123,7 +119,7 @@
 
           <div class="container_button">
             <a
-              href="https://drive.google.com/file/d/1SItM3VavOlb9aiP7hmxv4OH7SkVCIsys/view?usp=sharing"
+              href="https://drive.google.com/file/d/1McFOdaIkFOsJX7uEWLznhWabEsxWIpZn/view?usp=sharing"
               target="_blank">
               <button
                 class="cv_button"
@@ -418,7 +414,9 @@
               </a>
 
               <!-- Botón para el repositorio del proyecto en GitHub -->
-              <a href="https://github.com/Celeste941/portafolio-celestePerez" target="_blank">
+              <a
+                href="https://github.com/Celeste941/portafolio-celestePerez"
+                target="_blank">
                 <button class="btn_repo">
                   <img
                     src="./assets/images/icon-githubProyecto.png"
@@ -427,9 +425,10 @@
               </a>
             </div>
           </div>
+
           <!-- Tarjeta de proyecto: PokeApi -->
           <div
-            class="cards--proyectos card_JuegoAhorcado"
+            class="cards--proyectos card_pokeApi"
             data-aos="zoom-in-up"
             data-aos-anchor-placement="center-bottom">
             <!-- Contenedor de la imagen del proyecto -->
@@ -477,7 +476,7 @@
 
           <!-- Tarjeta de proyecto: Templates y rendering en Vue -->
           <div
-            class="cards--proyectos card_encriptador"
+            class="cards--proyectos card_template"
             data-aos="zoom-in-up"
             data-aos-anchor-placement="center-bottom">
             <!-- Contenedor de la imagen del proyecto -->
@@ -601,28 +600,22 @@
       </section>
     </main>
 
+    <!-- Footer -->
     <footer>
       <div class="contianer--footer">
         <div class="container_redes-footer">
           <a
-            href="https://www.linkedin.com/in/roimer-maestre-3b5539304/"
+            href="https://www.linkedin.com/in/ana-celeste-perez-oviedo-29bb0218a/"
             target="_blank">
             <img src="./assets/images/icon-linkedin.png" alt="LinkedIn" />
           </a>
-          <a href="https://github.com/RoimerMaestre" target="_blank">
+          <a href="https://github.com/Celeste941" target="_blank">
             <img src="./assets/images/icon-github.png" alt="GitHub" />
           </a>
-          <!-- <a href="https://codepen.io/mariasmoUN" target="_blank">
-                    <img src="./assets/images/icon-codepen.png" alt="CodePen" class="icon_codepen--footer">
-                </a>
-                <a href="https://www.instagram.com/mar.am0410/?next=%2F" target="_blank">
-                    <img src="./assets/images/icon-instagram.png" alt="Instagram"">
-                </a> -->
         </div>
 
         <div class="container_text--footer">
-          <span>Copyright © | Coded with</span>
-          <!-- <img src="./assets/images/icon-corazon.png" alt="Corazón"> -->
+          <span>Whatsapp (+56) 9 79368299</span>
           <span class="footer-by">| by </span>
           <span>Ana Celeste Pérez</span>
         </div>
