--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
         <h1 data-section="proyectos" data-value="title" data-aos="fade-up">
           Proyectos
         </h1>
-
-        <!-- Imágenes decorativas en la sección de proyectos -->
+<!-- 
+        Imágenes decorativas en la sección de proyectos
         <img
           src="./assets/images/puntos.png"
           alt="Decoración puntos"
@@ -374,7 +374,7 @@
         <img
           src="./assets/images/puntos.png"
           alt="Decoración puntos"
-          class="puntos2-proyectos" />
+          class="puntos2-proyectos" /> -->
 
         <!-- Contenedor de tarjetas de proyectos -->
         <div class="cards_container--proyectos">
